// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change finish icon when using finish-icon prop 1`] = `
<div class="mi-hairline mi-step mi-step--horizontal mi-step--finish">
  <div class="mi-step__title">
    A
  </div>
  <div class="mi-step__circle-container">
    <i class="mi-badge__wrapper mi-icon mi-icon-foo mi-step__icon mi-step__icon--finish">
    </i>
  </div>
  <div class="mi-step__line">
  </div>
</div>
`;

exports[`should change inactive color when using inactive-color prop 1`] = `
<div class="mi-steps mi-steps--horizontal">
  <div class="mi-steps__items">
    <div class="mi-hairline mi-step mi-step--horizontal mi-step--process">
      <div class="mi-step__title mi-step__title--active">
        A
      </div>
      <div class="mi-step__circle-container">
        <i class="mi-badge__wrapper mi-icon mi-icon-checked mi-step__icon mi-step__icon--active">
        </i>
      </div>
      <div
        class="mi-step__line"
        style="background: red;"
      >
      </div>
    </div>
    <div class="mi-hairline mi-step mi-step--horizontal mi-step--waiting">
      <div
        class="mi-step__title"
        style="color: red;"
      >
        B
      </div>
      <div class="mi-step__circle-container">
        <i
          class="mi-step__circle"
          style="background: red;"
        >
        </i>
      </div>
      <div
        class="mi-step__line"
        style="background: red;"
      >
      </div>
    </div>
  </div>
</div>
`;

exports[`should change inactive icon when using inactive-icon prop 1`] = `
<div class="mi-hairline mi-step mi-step--horizontal mi-step--waiting">
  <div class="mi-step__title">
    B
  </div>
  <div class="mi-step__circle-container">
    <i class="mi-badge__wrapper mi-icon mi-icon-foo mi-step__icon">
    </i>
  </div>
  <div class="mi-step__line">
  </div>
</div>
`;

exports[`should render finish icon slot correctly 1`] = `
<div class="mi-hairline mi-step mi-step--horizontal mi-step--finish">
  <div class="mi-step__title">
    A
  </div>
  <div class="mi-step__circle-container">
    Custom Finish Icon
  </div>
  <div class="mi-step__line">
  </div>
</div>
`;

exports[`should render icon slot correctly 1`] = `
<div class="mi-steps mi-steps--horizontal">
  <div class="mi-steps__items">
    <div class="mi-hairline mi-step mi-step--horizontal mi-step--process">
      <div class="mi-step__title mi-step__title--active">
        B
      </div>
      <div class="mi-step__circle-container">
        Custom Active Icon
      </div>
      <div class="mi-step__line">
      </div>
    </div>
    <div class="mi-hairline mi-step mi-step--horizontal mi-step--waiting">
      <div class="mi-step__title">
        A
      </div>
      <div class="mi-step__circle-container">
        Custom Inactive Icon
      </div>
      <div class="mi-step__line">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render icon-prefix correctly 1`] = `
<div class="mi-hairline mi-step mi-step--horizontal mi-step--process">
  <div class="mi-step__title mi-step__title--active">
    B
  </div>
  <div class="mi-step__circle-container">
    <i class="mi-badge__wrapper custom-icon custom-icon-checked mi-step__icon mi-step__icon--active">
    </i>
  </div>
  <div class="mi-step__line">
  </div>
</div>
`;
